force-app/main/default/objects/CPQ_Settings__c/fields/Add_On_Plural__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Plural__c</fullName>
    <description>Overridden plural label for Add-ons</description>
    <label>Add On Plural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>