force-app/main/default/objects/CPQ_Settings__c/fields/Add_On_Singular__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Singular__c</fullName>
    <description>Overridden singular label for Add-on</description>
    <label>Add On Singular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>