force-app/main/default/objects/CPQ_Settings__c/fields/Product_Plural__c.field-meta.xml
<CustomField>
    <fullName>Product_Plural__c</fullName>
    <description>Overridden plural label for Products</description>
    <label>Product Plural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>