force-app/main/default/objects/CPQ_Settings__c/fields/Product_Singular__c.field-meta.xml
<CustomField>
    <fullName>Product_Singular__c</fullName>
    <description>Overridden singular label for Product</description>
    <label>Product Singular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>