force-app/main/default/objects/CPQ_Settings__c/fields/Resource_Role_Plural__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role_Plural__c</fullName>
    <description>Overridden plural label for Resource Roles</description>
    <label>Resource Role Plural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>