force-app/main/default/objects/CPQ_Settings__c/fields/Resource_Role_Singular__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role_Singular__c</fullName>
    <description>Overridden singular label for Resource Role</description>
    <label>Resource Role Singular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>